chore: updates manifest template for c2p openscap plugin
Related CPLYTM-276

Signed-off-by: Jennifer Power <barnabei.jennifer@gmail.com>

--- a/base_ansible_env/templates/c2p-openscap-manifest.json.j2
+++ b/base_ansible_env/templates/c2p-openscap-manifest.json.j2
@@ -4,7 +4,8 @@
     "description": "My openscap plugin",
     "version": "0.0.1",
     "types": [
-      "pvp"
+      "generation",
+      "aggregation"
     ]
   },
   "executablePath": "openscap-plugin",
